--- a/homework/hw9/hw_09_part2.Rmd
+++ b/homework/hw9/hw_09_part2.Rmd
@@ -3,13 +3,14 @@ title: "hw_09_part2"
 author: "Barbara Klein"
 date: "11/1/2020"
 output:
+  word_document: default
   html_document:
     df_print: paged
 github_markdown: default
 ---
 
 ##### 1. Write a function to calculate variance of a numeric vector.
-```{r}
+```{r, include=TRUE}
 #Here I will create my numeric vector: numeric_vec <- as.numeric(c(1, 3, 45, 23, 44, 22, 23, 12, 43, 32, 14))
 
 functionforvariance <-function(numeric_vec) {
@@ -22,7 +23,7 @@ functionforvariance <-function(numeric_vec) {
 
 ##### 2. Write a function (both_na), in which two vectors of the same length and returns the number of positions that have an NA in both vectors.
 
-```{r}
+```{r, include=TRUE}
 #Here I will create my two vectors of the same length: vec1 <- as.numeric(c(1, 2, NA, 4, 5, 6, NA, NA, 9)) . . .  vec2 <- as.numeric(c(2, 4, NA, 8, 10, 12, NA, 16, 18))
 
 functionforbothNA <- function(vec1, vec2) {
@@ -37,13 +38,13 @@ functionforbothNA(
 The output R gives, explains that within my numeric vectors of the same length, two of the positions are the same in that they both have NA values in the same place. 
 
 ##### 3. Write a function to create a specific kind of plot, with useful labels, etc., that can take a data frame as an argument. 
-```{r}
+```{r, include=TRUE}
 class(mtcars)
 mtcars[c("mpg", "cyl")]
 ```
 
 
-```{r}
+```{r, include=TRUE}
 library(ggplot2)
 plotz <- function(){
 some_plot <- ggplot(data = mtcars, 
@@ -65,7 +66,7 @@ plotz()
 ###### b) if the argument is a character vector, sorts the vector into alphabetical order.
 ###### c) if the argument is anything else, issues an informative warning and returns the argument unchanged.
 
-```{r}
+```{r, include=TRUE}
 # Here is a character vector: tigger <- as.character("eeyore", "hunny", "roo", "piglet")
 # The numeric vector will be the one used from the previous question #1 (above)
 
@@ -83,7 +84,7 @@ winnie_the_pooh(TRUE)
 
 ##### 5. Write a function that tries to calculate the mean of a vector using mean(). If that is successful, it returns the mean of the vector. If mean() throws an error, it issues an informative message and returns the input intact. 
 
-```{r}
+```{r, include=TRUE}
 # I will use the numeric vector created previously in question #1. 
 mean_vec <- function(taco) {
   mv <- tryCatch({
@@ -97,7 +98,7 @@ mean_vec <- function(taco) {
 
 ##### 6. Use system.time() (or, if you want to be more advanced about it, the bench or microbenchmark packages) to compare how long it takes to add two, 1-million-element random vectors and store the result in a third vector: 
 
-```{r}
+```{r, include=TRUE}
 #install microbenchmark package: this package wraps the 'system.time' function and makes it straight forward as it compares more than one function. 
 million_vec1 <- sample(1:100, 
                        1000000, 
@@ -111,7 +112,7 @@ million_vec2 <- sample(1:100,
 ###### -These vector objects in 'million_vec1' and 'million_vec2' can be repeated.
 ###### -Never put in NULL where length would be zero..the object would start empty and slowly fill up the vector with integers. This takes up memory and lots of time. Alternatively, you never want to 'grow' a vector. 
 
-```{r}
+```{r, include=TRUE}
 # a.Using any vectorized operation (e.g., `+`).
 millvec_systime <- function() {
   c(sum(sample(1:100,
@@ -124,7 +125,7 @@ millvec_systime <- function() {
 system.time(millvec_systime())
 ```
 
-```{r}
+```{r, include=TRUE}
 # b.Using 'a' for loop with a pre-allocated vector to store the results.
 store_millvec <- numeric()
 
@@ -132,7 +133,7 @@ system.time(store_millvec <- c(for(i in 1:1000000)
                                     {i + i}
                                ))
 ```
-```{r}
+```{r, include=TRUE}
 # c.Using 'a' for loop without pre-allocating a vector to store the results.
 system.time(store_NA <- for(i in 1:1000000) 
                               {i + i}
